Fix crawler, continue with website

--- a/website/package.json
+++ b/website/package.json
@@ -15,7 +15,6 @@
   },
   "dependencies": {
     "datatables.net-dt": "^2.2.2",
-    "jquery": "^3.7.1",
-    "simpledotcss": "^2.3.4"
+    "jquery": "^3.7.1"
   }
 }
