--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
     "scripts": {
         "heroku-postbuild": "cd website && npm install && npm run build"
+    },
+    "engines": {
+        "node": "22.x"
     }
 }
