--- a/website/package.json
+++ b/website/package.json
@@ -9,12 +9,10 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "devDependencies": {
-    "parcel": "^2.13.3",
-    "parcel-reporter-static-files-copy": "^1.5.3"
-  },
   "dependencies": {
     "datatables.net-dt": "^2.2.2",
+    "parcel": "^2.13.3",
+    "parcel-reporter-static-files-copy": "^1.5.3",
     "jquery": "^3.7.1"
   }
 }
