--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,9 +11,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # so we can query the Git commit time
       - run: echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
         working-directory: ./website
         id: nvm
+      - run: echo ::set-output name=COURSES_LAST_CHANGED::$(git log -1 --pretty='format:%cd' --date=format:'%Y-%m-%d %H:%M' ./static/courses.json)
+        working-directory: ./website
+        id: courses
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -26,6 +31,8 @@ jobs:
         working-directory: ./website
       - name: Build
         run: npm run build
+        env:
+          COURSES_LAST_CHANGED: ${{ steps.courses.outputs.COURSES_LAST_CHANGED }}
         working-directory: ./website
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
