Use different GitHub PAT token for scraping, so its push will trigger deploy workflow (see e.g. https://stackoverflow.com/a/67551255)

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Check out this repo
         uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.FABI_REPO_PAT }}
       - name: Install the latest version of uv
         uses: astral-sh/setup-uv@v5
         with:
