--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - run: echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
         working-directory: ./website
         id: nvm
-      - run: echo ::set-output name=COURSES_LAST_CHANGED::$(git log -1 --pretty='format:%cd' --date=format:'%Y-%m-%d, %H:%M' ./static/courses.json)
+      - run: echo ::set-output name=COURSES_LAST_CHANGED::$(git log -1 --pretty='format:%cd' ./static/courses.json)
         working-directory: ./website
         id: courses
       - name: Setup Node
