--- a/website/package.json
+++ b/website/package.json
@@ -10,8 +10,9 @@
   "description": "",
   "dependencies": {
     "datatables.net-dt": "^2.2.2",
+    "jquery": "^3.7.1",
     "parcel": "^2.13.3",
     "parcel-reporter-static-files-copy": "^1.5.3",
-    "jquery": "^3.7.1"
+    "svgo": "^3.3.2"
   }
 }
